COMMUNICATION-421 - Support the IDIS specifications for DLMS
Forwardport from 8.9: new message (for LP config) and usage of the sun.misc Base64 decoder.

git-svn-id: http://source.eict.vpdc/svn/labo/protocols/trunk@55602 0d108963-8a47-0410-809b-ebd9fb3b3407